# resources-compiler

./: CMakeLists.txt  README.md  conanfile.txt  resources_compiler.cpp
src/: resources_compiler.cpp
